# man

apps/host/: CMakeLists.txt  main.cpp
apps/host/qml/: main.qml  qml.qrc
apps/host/src/: main.cpp  manAudioEngine.cpp  manAudioEngine.h  manSignalFlow.cpp  manSignalFlow.h  manSineWaveGenerator.cpp  manSineWaveGenerator.h  manSquareWaveGenerator.cpp  manSquareWaveGenerator.h  manTriangleWaveGenerator.cpp  manTriangleWaveGenerator.h
cmake/: asiosdk.cmake  boost.cmake  qt.cmake  unittest-cpp.cmake
libs/manAudioDevice/: CMakeLists.txt
libs/manAudioDevice/include/manAudioDevice/: manAudioDevice.h  manAudioDeviceList.h
libs/manAudioDevice/src/: manAudioDevice.cpp  manAudioDeviceList.cpp
libs/manAudioDevice/src/ios/: manAudioUnitDevice.mm  manAudioUnitDeviceList.h  manAudioUnitDeviceList.mm
libs/manAudioDevice/src/mac/: CoreAudioDeviceList.h  manCoreAudioDevice.h  manCoreAudioDevice.mm  manCoreAudioDeviceList.h  manCoreAudioDeviceList.mm  manCoreAudioHelper.h
libs/manAudioDevice/src/pc/: manAsioDevice.cpp  manAsioDevice.h  manAsioDeviceList.cpp  manAsioDeviceList.h
libs/manWaveform/: CMakeLists.txt  qmldir
libs/manWaveform/include/: manWaveformItem.h
libs/manWaveform/include/manWaveform/: manWaveformItem.h
libs/manWaveform/src/: manWaveformItem.cpp  manWaveformPlugin.cpp
